adicionado novos metodos HTTP
